--- a/whatever.ipynb
+++ b/whatever.ipynb
@@ -1,6 +1,94 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d99a6e68-8216-4d3e-8577-f245db94bc8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (3988221729.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mcurrent_dir = os.getcwd()\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "  import os\n",
+    "    current_dir = os.getcwd()\n",
+    "    print(current_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "589a428e-a00f-4d41-823c-702e390ff795",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/mikexi/conda machine learning\n"
+     ]
+    }
+   ],
+   "source": [
+    "    import os\n",
+    "    current_dir = os.getcwd()\n",
+    "    print(current_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fa5edfbb-a026-42a1-9de6-9dc169f65794",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/mikexi/conda_machine_learning\n"
+     ]
+    }
+   ],
+   "source": [
+    "    import os\n",
+    "    current_dir = os.getcwd()\n",
+    "    print(current_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b3d74b9-09da-420a-afc3-6acb41f718ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python (mlenv)",
+   "language": "python",
+   "name": "mlenv"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
