--- a/whatever.ipynb
+++ b/whatever.ipynb
@@ -63,8 +63,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5b3d74b9-09da-420a-afc3-6acb41f718ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c9bc71c-3309-493b-a520-5aa4d6f12059",
    "metadata": {},
    "outputs": [],
    "source": []
